2009-12-20  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-keypad.c: Process keypad button events only when the mode is
	not debug. Fixes SF #2462607.
	* src/interface.c: Add certain size to assembler listing window. Fixes
	SF #1942893.
	* data/8085asm.lang: Add sp to the list of registers. Fixes SF #2582426.

2009-12-19  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-app.c, src/gui-keypad.c, src/gui-list-message.c,
	src/interface.c: Swap horizontal and vertical panes for better
	arrangement of widgets. Provides more vertical and slightly more
	horizontal area to the editor.

2008-12-21  Onkar Shinde  <onkarshinde@gmail.com>

	* AUTHORS: Add Krishna Bharadwaj to list of patch contributors.
	Modify Sridhar's email id.
	* src/support.[c,h]: Add function to read authors list from AUTHORS
	file. Remove unused functions.
	* src/interface.c: Call function to read authors from AUTHORS file.
	* po/gnusim8085.pot: Auto updated.
	* debian/: There is no point of maintaining our own version of
	packaging files. Hence remove the directory.

2008-12-20  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: fix DAD instruction carry set/reset
	bug. Thanks to Aditya M for the patch.
	* AUTHORS: Changed Onkar's email id.

2008-12-11  Onkar Shinde  <onkarshinde@gmail.com>
	* src/interface.c: Fix warnings about deprecated non-zero page size in
	spin button.
	* src/file-op.c: Set setting for overwrite confirmation. It will get
	used for 'Save As' action. Fix compiler warnings because of the
	ignored return values of some file related functions.
	* src/callbacks.c: Call gui_editor_show for listing window so syntax
	highlighting gets activated.
	* data/8085asm.lang: Make syntax highlighting case insensitive. Fix
	labels not getting highlighted in listing window. Fix hex opcodes or
	addresses not getting highlighted in listing window.
	* AUTHORS: Add Madhusudan and Aditya in list of patch contributors.
	* NEWS: Fix news file. We have not yet released 1.3.5.