@@ -5,3 +5,4 @@ Exec=gnusim8085
 Icon=@PACKAGE_PIXMAPS_DIR@/gnusim8085_icon.png
 Terminal=false
 Type=Application
+Categories=GNOME;GTK;Development;
