@@ -5,6 +5,7 @@
 	* src/interface.c: Add certain size to assembler listing window. Fixes
 	SF #1942893.
 	* data/8085asm.lang: Add sp to the list of registers. Fixes SF #2582426.
+	* Makefile.[am,in], GNUSim8085.desktop.in: Merge patches from Debian.
 
 2009-12-19  Onkar Shinde  <onkarshinde@gmail.com>
 
